jsonschemadsl2ecore.trafo.opt/test/test79/invalidtests/example6.test79
{
	"prop1":true,
	"prop2":1.0,
	"I_":1.2
}